reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__replay__report.rs_line_149_col_5_001.log

*** crates/tracewake-core/src/replay/report.rs:149:5: replace first_divergence_detail -> Option<ReplayDivergenceDetail> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/replay/report.rs
+++ replace first_divergence_detail -> Option<ReplayDivergenceDetail> with Some(Default::default())
@@ -141,25 +141,17 @@
     }
 }
 
 fn first_divergence_detail(
     state_diff: &[String],
     log: &EventLog,
     event_count_applied: usize,
 ) -> Option<ReplayDivergenceDetail> {
-    let first_diff = state_diff.first()?;
-    let first_divergent_event_id = event_count_applied
-        .checked_sub(1)
-        .and_then(|index| log.events().get(index))
-        .map(|event| event.event_id.as_str().to_string());
-    Some(ReplayDivergenceDetail {
-        first_divergent_event_id,
-        field_family: classify_state_diff_family(first_diff),
-    })
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn classify_state_diff_family(diff: &str) -> ReplayDivergenceFieldFamily {
     if diff.starts_with("actors ") {
         ReplayDivergenceFieldFamily::Actor
     } else if diff.starts_with("places ") {
         ReplayDivergenceFieldFamily::Place
     } else if diff.starts_with("doors ") {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/replay/report.rs` has changed (1781911440.435924338s, 5s after last build at 1781911435.027924343s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ReplayDivergenceDetail: Default` is not satisfied
   --> crates/tracewake-core/src/replay/report.rs:149:10
    |
149 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ReplayDivergenceDetail`
   --> crates/tracewake-core/src/replay/report.rs:26:1
    |
 26 | pub struct ReplayDivergenceDetail {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `replay::report::ReplayDivergenceDetail: Default` is not satisfied
   --> crates/tracewake-core/src/replay/report.rs:149:10
    |
149 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `replay::report::ReplayDivergenceDetail`
   --> crates/tracewake-core/src/replay/report.rs:26:1
    |
 26 | pub struct ReplayDivergenceDetail {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
